fix spacing

--- a/app/src/app/components/actionsComponent.css
+++ b/app/src/app/components/actionsComponent.css
@@ -1,6 +1,7 @@
 .Component_Actions {
     display: flex;
     flex-direction: column;
+    gap: 5px;
 
     overflow-y: scroll;
 }
