--- a/app/src/app/components/linksComponent.css
+++ b/app/src/app/components/linksComponent.css
@@ -1,6 +1,8 @@
 .Component_Links {
     display: grid;
-    grid-template-columns: repeat(8, 1fr);
+    grid-template-columns: repeat(auto-fit, minmax(50px, 200px));
+    justify-content: space-around;
+    gap: 10px;
 }
 
 .Component_Links>a {
